More video previews added

--- a/index.html
+++ b/index.html
@@ -20,10 +20,83 @@
             </div>
         </div>
     </div>
-
-    
-
-
+    <div class="video-container">
+        <img src="pictures/thumbnail2.jpg" alt="thumbnail1" class="video-thumbnail">
+        <div class="video-info">
+            <img src="pictures/channel-profile-2.jpg" alt="channel-profile" class="channel-profile">
+            <div class="video-description">
+                <p class="video-title">Man Vs Baby | Official Trailer | Netflix</p>
+                <p class="video-author">Netflix</p>
+                <p class="video-views">6.2M views &#183; 3 days ago</p>
+            </div>
+        </div>
+    </div>
+    <div class="video-container">
+        <img src="pictures/thumbnail3.jpg" alt="thumbnail1" class="video-thumbnail">
+        <div class="video-info">
+            <img src="pictures/channel-profile-3.jpg" alt="channel-profile" class="channel-profile">
+            <div class="video-description">
+                <p class="video-title">Build an website in 1 Hour and win cash prize.</p>
+                <p class="video-author">Brototype Malayalam </p>
+                <p class="video-views">17K views &#183; 3 days ago</p>
+            </div>
+        </div>
+    </div>
+    <div class="video-container">
+        <img src="pictures/thumbnail4.jpg" alt="thumbnail1" class="video-thumbnail">
+        <div class="video-info">
+            <img src="pictures/channel-profile-4.jpg" alt="channel-profile" class="channel-profile">
+            <div class="video-description">
+                <p class="video-title">Gemini Designer is INSANE... Build Beautiful Websites in Minutes</p>
+                <p class="video-author">AI LABS</p>
+                <p class="video-views">72K views &#183; 7 days ago</p>
+            </div>
+        </div>
+    </div>
+    <div class="video-container">
+        <img src="pictures/thumbnail5.jpg" alt="thumbnail1" class="video-thumbnail">
+        <div class="video-info">
+            <img src="pictures/channel-profile-5.jpg" alt="channel-profile" class="channel-profile">
+            <div class="video-description">
+                <p class="video-title">11 Free Windows Apps You Need to Install RIGHT NOW - Part 4</p>
+                <p class="video-author">Trakin Tech English</p>
+                <p class="video-views">49K views &#183; 2 days ago</p>
+            </div>
+        </div>
+    </div>
+    <div class="video-container">
+        <img src="pictures/thumbnail6.jpg" alt="thumbnail1" class="video-thumbnail">
+        <div class="video-info">
+            <img src="pictures/channel-profile-6.jpg" alt="channel-profile" class="channel-profile">
+            <div class="video-description">
+                <p class="video-title">iPhone 17 | My Review | Best iPhone Evaaa !!! | Sale King !! | Malayalam</p>
+                <p class="video-author">CallMeShazzam Vines</p>
+                <p class="video-views">257K views &#183; 6 days ago</p>
+            </div>
+        </div>
+    </div>
+    <div class="video-container">
+        <img src="pictures/thumbnail7.jpg" alt="thumbnail1" class="video-thumbnail">
+        <div class="video-info">
+            <img src="pictures/channel-profile-7.jpg" alt="channel-profile" class="channel-profile">
+            <div class="video-description">
+                <p class="video-title">How To Get Unlimited Claude Code Free.. (Better Then Cursor Trial)</p>
+                <p class="video-author">TechKevin</p>
+                <p class="video-views">55K views &#183; 2 weeks ago</p>
+            </div>
+        </div>
+    </div>
+    <div class="video-container">
+        <img src="pictures/thumbnail8.jpg" alt="thumbnail1" class="video-thumbnail">
+        <div class="video-info">
+            <img src="pictures/channel-profile-8.jpg" alt="channel-profile" class="channel-profile">
+            <div class="video-description">
+                <p class="video-title">Build Infinite Carousel Animations in 4 Minutes</p>
+                <p class="video-author">Coding2GO</p>
+                <p class="video-views">58K views &#183; 1 month ago</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
