--- a/index.html
+++ b/index.html
@@ -5,98 +5,211 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
-    <link rel="stylesheet" href="styles/index.css">
+
+    <link rel="stylesheet" href="styles/body.css">
+    <link rel="stylesheet" href="styles/header.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
-    <div class="video-container">
-        <img src="pictures/thumbnail1.jpg" alt="thumbnail1" class="video-thumbnail">
-        <div class="video-info">
-            <img src="pictures/channel-profile-1.jpg" alt="channel-profile" class="channel-profile">
-            <div class="video-description">
-                <p class="video-title">React Tutorial Full Course - Beginner to Pro (React 19, 2025)</p>
-                <p class="video-author">SuperSimpleDev</p>
-                <p class="video-views">235K views &#183; 1 month ago</p>
+    <div class="header-container">
+        <div class="left-side">
+            <div class="hamburger-icon">
+                <img src="pictures/hamburger-icon.png" alt="" class="hamburger-icon">
+
+            </div>
+        </div>
+        <div class="middle-side">
+            <input type="text">
+        </div>
+        <div class="right-side">
+            hi
+        </div>
+    </div>
+    <div class="body-container">
+        <div class="video-container">
+            <img src="pictures/thumbnail1.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-1.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">React Tutorial Full Course - Beginner to Pro (React 19, 2025)</p>
+                    <p class="video-author">SuperSimpleDev</p>
+                    <p class="video-views">235K views &#183; 1 month ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail2.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-2.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">Man Vs Baby | Official Trailer | Netflix</p>
+                    <p class="video-author">Netflix</p>
+                    <p class="video-views">6.2M views &#183; 3 days ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail3.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-3.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">Build an website in 1 Hour and win cash prize.</p>
+                    <p class="video-author">Brototype Malayalam </p>
+                    <p class="video-views">17K views &#183; 3 days ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail4.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-4.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">Gemini Designer is INSANE... Build Beautiful Websites in Minutes</p>
+                    <p class="video-author">AI LABS</p>
+                    <p class="video-views">72K views &#183; 7 days ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail5.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-5.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">11 Free Windows Apps You Need to Install RIGHT NOW - Part 4</p>
+                    <p class="video-author">Trakin Tech English</p>
+                    <p class="video-views">49K views &#183; 2 days ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail6.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-6.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">iPhone 17 | My Review | Best iPhone Evaaa !!! | Sale King !! | Malayalam</p>
+                    <p class="video-author">CallMeShazzam Vines</p>
+                    <p class="video-views">257K views &#183; 6 days ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail7.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-7.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">How To Get Unlimited Claude Code Free.. (Better Then Cursor Trial)</p>
+                    <p class="video-author">TechKevin</p>
+                    <p class="video-views">55K views &#183; 2 weeks ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail8.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-8.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">Build Infinite Carousel Animations in 4 Minutes</p>
+                    <p class="video-author">Coding2GO</p>
+                    <p class="video-views">58K views &#183; 1 month ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail1.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-1.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">React Tutorial Full Course - Beginner to Pro (React 19, 2025)</p>
+                    <p class="video-author">SuperSimpleDev</p>
+                    <p class="video-views">235K views &#183; 1 month ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail2.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-2.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">Man Vs Baby | Official Trailer | Netflix</p>
+                    <p class="video-author">Netflix</p>
+                    <p class="video-views">6.2M views &#183; 3 days ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail3.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-3.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">Build an website in 1 Hour and win cash prize.</p>
+                    <p class="video-author">Brototype Malayalam </p>
+                    <p class="video-views">17K views &#183; 3 days ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail4.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-4.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">Gemini Designer is INSANE... Build Beautiful Websites in Minutes</p>
+                    <p class="video-author">AI LABS</p>
+                    <p class="video-views">72K views &#183; 7 days ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail5.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-5.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">11 Free Windows Apps You Need to Install RIGHT NOW - Part 4</p>
+                    <p class="video-author">Trakin Tech English</p>
+                    <p class="video-views">49K views &#183; 2 days ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail6.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-6.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">iPhone 17 | My Review | Best iPhone Evaaa !!! | Sale King !! | Malayalam</p>
+                    <p class="video-author">CallMeShazzam Vines</p>
+                    <p class="video-views">257K views &#183; 6 days ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail7.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-7.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">How To Get Unlimited Claude Code Free.. (Better Then Cursor Trial)</p>
+                    <p class="video-author">TechKevin</p>
+                    <p class="video-views">55K views &#183; 2 weeks ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-container">
+            <img src="pictures/thumbnail8.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-info">
+                <img src="pictures/channel-profile-8.jpg" alt="channel-profile" class="channel-profile">
+                <div class="video-description">
+                    <p class="video-title">Build Infinite Carousel Animations in 4 Minutes</p>
+                    <p class="video-author">Coding2GO</p>
+                    <p class="video-views">58K views &#183; 1 month ago</p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="video-container">
-        <img src="pictures/thumbnail2.jpg" alt="thumbnail1" class="video-thumbnail">
-        <div class="video-info">
-            <img src="pictures/channel-profile-2.jpg" alt="channel-profile" class="channel-profile">
-            <div class="video-description">
-                <p class="video-title">Man Vs Baby | Official Trailer | Netflix</p>
-                <p class="video-author">Netflix</p>
-                <p class="video-views">6.2M views &#183; 3 days ago</p>
-            </div>
-        </div>
-    </div>
-    <div class="video-container">
-        <img src="pictures/thumbnail3.jpg" alt="thumbnail1" class="video-thumbnail">
-        <div class="video-info">
-            <img src="pictures/channel-profile-3.jpg" alt="channel-profile" class="channel-profile">
-            <div class="video-description">
-                <p class="video-title">Build an website in 1 Hour and win cash prize.</p>
-                <p class="video-author">Brototype Malayalam </p>
-                <p class="video-views">17K views &#183; 3 days ago</p>
-            </div>
-        </div>
-    </div>
-    <div class="video-container">
-        <img src="pictures/thumbnail4.jpg" alt="thumbnail1" class="video-thumbnail">
-        <div class="video-info">
-            <img src="pictures/channel-profile-4.jpg" alt="channel-profile" class="channel-profile">
-            <div class="video-description">
-                <p class="video-title">Gemini Designer is INSANE... Build Beautiful Websites in Minutes</p>
-                <p class="video-author">AI LABS</p>
-                <p class="video-views">72K views &#183; 7 days ago</p>
-            </div>
-        </div>
-    </div>
-    <div class="video-container">
-        <img src="pictures/thumbnail5.jpg" alt="thumbnail1" class="video-thumbnail">
-        <div class="video-info">
-            <img src="pictures/channel-profile-5.jpg" alt="channel-profile" class="channel-profile">
-            <div class="video-description">
-                <p class="video-title">11 Free Windows Apps You Need to Install RIGHT NOW - Part 4</p>
-                <p class="video-author">Trakin Tech English</p>
-                <p class="video-views">49K views &#183; 2 days ago</p>
-            </div>
-        </div>
-    </div>
-    <div class="video-container">
-        <img src="pictures/thumbnail6.jpg" alt="thumbnail1" class="video-thumbnail">
-        <div class="video-info">
-            <img src="pictures/channel-profile-6.jpg" alt="channel-profile" class="channel-profile">
-            <div class="video-description">
-                <p class="video-title">iPhone 17 | My Review | Best iPhone Evaaa !!! | Sale King !! | Malayalam</p>
-                <p class="video-author">CallMeShazzam Vines</p>
-                <p class="video-views">257K views &#183; 6 days ago</p>
-            </div>
-        </div>
-    </div>
-    <div class="video-container">
-        <img src="pictures/thumbnail7.jpg" alt="thumbnail1" class="video-thumbnail">
-        <div class="video-info">
-            <img src="pictures/channel-profile-7.jpg" alt="channel-profile" class="channel-profile">
-            <div class="video-description">
-                <p class="video-title">How To Get Unlimited Claude Code Free.. (Better Then Cursor Trial)</p>
-                <p class="video-author">TechKevin</p>
-                <p class="video-views">55K views &#183; 2 weeks ago</p>
-            </div>
-        </div>
-    </div>
-    <div class="video-container">
-        <img src="pictures/thumbnail8.jpg" alt="thumbnail1" class="video-thumbnail">
-        <div class="video-info">
-            <img src="pictures/channel-profile-8.jpg" alt="channel-profile" class="channel-profile">
-            <div class="video-description">
-                <p class="video-title">Build Infinite Carousel Animations in 4 Minutes</p>
-                <p class="video-author">Coding2GO</p>
-                <p class="video-views">58K views &#183; 1 month ago</p>
-            </div>
-        </div>
-    </div>
+
 </body>
 
 </html>
