--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
+    <link rel="icon" type="image/png" href="pictures/Youtube-logo.png">
 
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/header.css">
@@ -19,13 +20,17 @@
 <body>
     <div class="header-container">
         <div class="left-side">
-            <div class="hamburger-icon">
+            <div class="hamburger-button">
                 <img src="pictures/hamburger-icon.png" alt="" class="hamburger-icon">
-
             </div>
+            <a href="https://www.youtube.com/" class="youtube">
+                <img src="pictures/Youtube-logo.png" alt="" class="youtube-logo">
+                <p class="youtube-text">Premium</p>
+            </a>
+            
         </div>
         <div class="middle-side">
-            <input type="text">
+            <input type="text" class="search-box" placeholder="Search">
         </div>
         <div class="right-side">
             hi
