--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="styles/body.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,18 +29,59 @@
                 <img src="pictures/Youtube-logo.png" alt="" class="youtube-logo">
                 <p class="youtube-text">Premium</p>
             </a>
-            
         </div>
+
+
         <div class="middle-side">
             <input type="text" class="search-box" placeholder="Search">
+            <button class="search-button">
+                <img src="pictures/search-icon.png" class="search-icon">
+            </button>
+            <button class="mic-button">
+                <img src="pictures/mic-icon.png" class="mic-icon">
+            </button>
         </div>
+
+
         <div class="right-side">
-            hi
+            <button class="create-button">
+                <img src="pictures/plus-icon.png" alt="" class="plus-icon">
+                <p class="create-text">Create</p>
+            </button>
+            <button class="bell-button">
+                <img src="pictures/notification-icon.png" alt="" class="bell-icon">
+            </button>
+            <button class="account-icon">
+                <img src="pictures/account-profile.jpg" alt="" class="account-profile">
+            </button>
         </div>
     </div>
+
+    <div class="sidebar-container">
+        <button class="sidebar-button">
+            <img src="pictures/home-icon.png" alt="" class="sidebar-icon">
+            <p class="sidebar-text">Home</p>
+        </button>
+        <button class="sidebar-button">
+            <img src="pictures/shorts-icon.png" alt="" class="sidebar-icon">
+            <p class="sidebar-text">Shorts</p>
+        </button>
+        <button class="sidebar-button">
+            <img src="pictures/subscriptions-icon.png" alt="" class="sidebar-icon">
+            <p class="sidebar-text">Subscriptions</p>
+        </button>
+        <button class="sidebar-button">
+            <img src="pictures/you-icon.png" alt="" class="sidebar-icon">
+            <p class="sidebar-text">You</p>
+        </button>
+    </div>
+
     <div class="body-container">
         <div class="video-container">
-            <img src="pictures/thumbnail1.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail1.jpg" alt="thumbnail1" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-1.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -49,7 +92,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail2.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail2.jpg" alt="thumbnail2" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-2.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -60,7 +106,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail3.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail3.jpg" alt="thumbnail3" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-3.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -71,7 +120,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail4.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail4.jpg" alt="thumbnail4" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-4.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -82,7 +134,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail5.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail5.jpg" alt="thumbnail5" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-5.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -93,7 +148,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail6.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail6.jpg" alt="thumbnail6" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-6.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -104,7 +162,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail7.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail7.jpg" alt="thumbnail7" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-7.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -115,7 +176,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail8.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail8.jpg" alt="thumbnail8" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-8.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -126,7 +190,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail1.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail1.jpg" alt="thumbnail1" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-1.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -137,7 +204,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail2.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail2.jpg" alt="thumbnail2" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-2.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -148,7 +218,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail3.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail3.jpg" alt="thumbnail3" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-3.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -159,7 +232,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail4.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail4.jpg" alt="thumbnail4" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-4.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -170,7 +246,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail5.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail5.jpg" alt="thumbnail5" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-5.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -181,7 +260,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail6.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail6.jpg" alt="thumbnail6" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-6.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -192,7 +274,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail7.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail7.jpg" alt="thumbnail7" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-7.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
@@ -203,7 +288,10 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="pictures/thumbnail8.jpg" alt="thumbnail1" class="video-thumbnail">
+            <div class="video-thumbnail-container">
+                <img src="pictures/thumbnail8.jpg" alt="thumbnail8" class="video-thumbnail">
+                <p class="video-length">10:00</p>
+            </div>
             <div class="video-info">
                 <img src="pictures/channel-profile-8.jpg" alt="channel-profile" class="channel-profile">
                 <div class="video-description">
